package pacman;

public interface Ghost {
    public void control(Pacman pac);
}
