@startuml

title __BETTERPACMAN's Class Diagram__\n

  namespace pacman {
    class pacman.BlueGhost {
    }
  }
  

  namespace pacman {
    interface pacman.Drawing {
    }
  }
  

  namespace pacman {
    class pacman.Entity {
    }
  }
  

  namespace pacman {
    class pacman.Game {
    }
  }
  

  namespace pacman {
    interface pacman.Ghost {
    }
  }
  

  namespace pacman {
    class pacman.Map {
    }
  }
  

  namespace pacman {
    class pacman.Pacman {
    }
  }
  

  namespace pacman {
    class pacman.PinkGhost {
    }
  }
  

  namespace pacman {
    class pacman.Play {
    }
  }
  

  namespace pacman {
    class pacman.RedGhost {
    }
  }
  

  namespace pacman {
    class pacman.YellowGhost {
    }
  }
  

  pacman.BlueGhost .up.|> pacman.Drawing
  pacman.BlueGhost -up-|> pacman.Entity
  pacman.Game .up.|> java.awt.event.ActionListener
  pacman.Game -up-|> javax.swing.JPanel
  pacman.Game o-- pacman.Map : map
  pacman.Game o-- pacman.Pacman : pacman
  pacman.Game o-- pacman.PinkGhost : pink
  pacman.Game o-- pacman.RedGhost : red
  pacman.Game o-- pacman.YellowGhost : yellow
  pacman.Pacman .up.|> pacman.Drawing
  pacman.Pacman -up-|> pacman.Entity
  pacman.PinkGhost .up.|> pacman.Drawing
  pacman.PinkGhost -up-|> pacman.Entity
  pacman.Play -up-|> javax.swing.JFrame
  pacman.RedGhost .up.|> pacman.Drawing
  pacman.RedGhost .up.|> pacman.Ghost
  pacman.RedGhost -up-|> pacman.Entity
  pacman.YellowGhost .up.|> pacman.Drawing
  pacman.YellowGhost -up-|> pacman.Entity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
